# mapof-tournaments

./: LICENSE.txt  README.md  requirements.txt  setup.py
examples/: test.py  test2.py
mapel-core/src/mapel/core/: inner_distances.py  printing.py
mapel-core/src/mapel/core/embedding/: embed.py
mapel-core/src/mapel/core/objects/: Experiment.py
mapel-elections/src/mapel/elections/cultures/to_be_removed/: euclidean.py
mapel-elections/src/mapel/elections/distances/: main_ordinal_distances.py
mapel-elections/src/mapel/elections/objects/: Election.py
mapel-tournaments/: README.md  pyproject.toml  requirements.txt
mapel-tournaments/src/mapel/tournaments/: __init__.py
mapel-tournaments/src/mapel/tournaments/objects/: Features.py  GraphSimilarity.py  TournamentCultures.py  TournamentExperiment.py  TournamentFamily.py  TournamentInstance.py  TournamentSimilarity.py  TournamentSolutions.py  helpers.py
src/mapof/tournaments/: __init__.py
src/mapof/tournaments/objects/: Features.py  TournamentCultures.py  TournamentExperiment.py  TournamentFamily.py  TournamentInstance.py  TournamentSimilarity.py  TournamentSolutions.py  generate_profiles.py  helpers.py
tests/func/mapof/tournaments/cultures/: test_tournaments_cultures.py
