[build-system]
requires = ["setuptools>=65", "wheel", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mapel-tournaments"
version = "2.0.25"
authors = [
 {name = "Filip Nikolow", email = "fnikol22@gmail.com"}
]
description = "Map of Tournaments"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
readme = "README.md"
dynamic = ["dependencies"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
